Now the eyecatcher is skipped without having to write a custom crt0.s file

--- a/68k/Makefile
+++ b/68k/Makefile
@@ -13,12 +13,11 @@ AS       := $(CROSS)as
 LD       := $(CROSS)gcc
 CC       := $(CROSS)gcc
 OBJCOPY  := $(CROSS)objcopy
-NGDEVKIT := /home/gbacretin/Software/ngdevkit
 ROMWAK   := romwak
 
 #ASFLAGS :=
 CFLAGS  := -std=c99 -fomit-frame-pointer -g -Wall -Wextra -Winline -funsigned-char
-LDFLAGS := -L$(NGDEVKIT)/local/m68k-neogeo-elf/lib -specs ngdevkit-specs
+LDFLAGS := -specs ngdevkit-specs -Wl,--defsym,rom_eye_catcher_mode=2 
 
 build: prom.bin
 
