Updating MZS driver
Moved some code from the deflemask vgm player, this does have to be updated accordingly
since the deflemask vgm player was made specifically for deflemask.

--- a/68k/Makefile
+++ b/68k/Makefile
@@ -16,7 +16,8 @@ OBJCOPY  := $(CROSS)objcopy
 ROMWAK   := romwak
 
 #ASFLAGS :=
-CFLAGS  := -std=c99 -fomit-frame-pointer -g -Og -Wall -Wextra -Winline -funsigned-char
+#CFLAGS  := -std=c99 -fomit-frame-pointer -g -Og -Wall -Wextra -Wpedantic -Winline -funsigned-char
+CFLAGS  := -std=c99 -fomit-frame-pointer -O2 -Wall -Wextra -Wpedantic -Winline -funsigned-char
 LDFLAGS := -specs ngdevkit-specs -Wl,--defsym,rom_eye_catcher_mode=2 
 
 build: prom.bin
