switched to sjasmplus due to license issues I do *not* want to deal with

--- a/z80/Makefile
+++ b/z80/Makefile
@@ -1,16 +1,14 @@
 ######## Mezz'Estate Studios NeoGeo M1ROM Makefile ########
 
 # Tools
-VASM   := vasmz80_oldstyle
 ROMWAK := romwak
 
 SRC := main.s
-VASM_FLAGS := -Fbin -nosym
 
 build: m1rom.bin
 
 m1rom.bin: $(SRC)
-	$(VASM) $< $(VASM_FLAGS) -o m1rom.tmp.bin -L listing.txt
+	sjasmplus --raw=m1rom.tmp.bin $< 
 	$(ROMWAK) /p m1rom.tmp.bin $@ 64 0
 	rm -fv m1rom.tmp.bin
 
