--- a/68k/Makefile
+++ b/68k/Makefile
@@ -18,7 +18,7 @@ ROMWAK   := romwak
 #ASFLAGS :=
 #CFLAGS  := -std=c99 -fomit-frame-pointer -g -Og -Wall -Wextra -Wpedantic -Winline -funsigned-char
 CFLAGS  := -std=c99 -fomit-frame-pointer -O2 -Wall -Wextra -Wpedantic -Winline -funsigned-char
-LDFLAGS := -specs ngdevkit-specs -Wl,--defsym,rom_eye_catcher_mode=2 
+LDFLAGS := $(shell pkg-config --libs ngdevkit) -Wl,--defsym,rom_eye_catcher_mode=2 
 
 build: prom.bin
 
