--- a/Makefile.config
+++ b/Makefile.config
@@ -1,10 +1,21 @@
-# Tools
-MAKE   := make
-MV     := mv
-CP     := cp
-RM     := rm
-DD     := dd
-ZASM   := zasm
-ROMWAK := romwak
-PYTHON := python3
+######## Tools ########
+MAKE      := make
+MV        := mv
+CP        := cp
+RM        := rm
+DD        := dd
+ZASM      := zasm
+ROMWAK    := romwak
+PYTHON    := python3
+
+######## Test Tools ########
+# only needed to compile and use the driver test program
+MAME      := mame
+ZIP       := zip
+LN        := ln 
+NEOSDCONV := neosdconv
+CROSS     := m68k-neogeo-elf-
+ADPCMA    := adpcma
+ADPCMB    := adpcmb
+
 SCRIPT_PATH := scripts
